--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -41,6 +41,12 @@
                     <div class="footer-sublink">Collaboration</div>
                 </div>
             </div>
+            <div class="col-auto ml-5 pl-5">
+                <div class="d-flex flex-column">
+                    <div class="footer-link font-weight-bold mb-2">NEWSLETTER</div>
+                    <div class="footer-sublink"><input type="text" placeholder="Adresse mail"></div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-fluid rights">
