--- a/templates/practical_info/index.html.twig
+++ b/templates/practical_info/index.html.twig
@@ -10,6 +10,14 @@
                     Informations pratiques
                 </div>
             </div>
+            <div class="row mb-3">
+                <div class="col-3">
+                    <div class="current-event--main-square practical-info-main-square">HORAIRES</div>
+                </div>
+                <div class="col-6 d-flex align-items-center">
+                    Du lundi au vendredi : 10h - 19h <br> samedi et dimanche : 10h - 13h
+                </div>
+            </div>
             <div class="row">
                 <div class="col-6 pr-0">
                     <div class="practical-info-text-block">
@@ -19,22 +27,14 @@
                 </div>
                 <div class="col-6">
                     <div class="row">
-                        <div class="col-6 ml-auto p-0">
-                            <div class="current-event--main-square practical-info-main-square">TARIFS</div>
+                        <div class="col ml-auto">
+                            <div class="current-event--main-square practical-info-main-square">TARIFS ET AVANTAGES</div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 p-0">
-                            <div class="current-event--main-square practical-info-main-square">HORAIRES</div>
-                        </div>
-                        <div class="col-6 mt-4 text-center">
-                            Gratuité <br>
-                            sous conditions * <br><br>
-                            Plein tarif : 5€ <br><br>
-                            Tarif réduit : 3€ **
-                        </div>
-                        <div class="col-6 practical-info-text-block-up text-center">
-                            Du lundi <br> au vendredi :<br> 10h - 19h <br> samedi et dimanche :<br> 10h - 13h
+                        <div class="col-6 mt-4 ml-3 pl-5">
+                            Gratuité sous conditions *<br><br> Plein tarif : 5€<br><br> Tarif réduit : 3€ **<br><br> Groupe d'au moins 10 personnes :<br><br> 3€ par personne
+                            <br> Etudiant : 3€ <br><br> Etudiant en filières art * (école publique) : gratuit <br><br> Mineurs (moins de 18 ans): gratuit
                         </div>
                     </div>
                 </div>
