--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,50 +11,60 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container-fluid pre-header">
-            <div class="row d-flex h-100 justify-content-center align-items-center">
-                <div class="col-auto h-100 d-flex align-items-center">
-                    Ré-ouverture de la Base Sous-Marine en 2021 !
+        <div class="app-wrapper">
+            <div class="container-fluid pre-header">
+                <div class="row d-flex h-100 justify-content-center align-items-center">
+                    <div class="col-auto h-100 d-flex align-items-center">
+                        Ré-ouverture de la Base Sous-Marine en 2021 !
+                    </div>
                 </div>
             </div>
-        </div>
-        <header class="header">
-            <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-auto mr-auto">
-                        <div><a href="{{ path('home') }}"><img src="{{ asset('images/LOGO-CENTRE.png') }}" alt=""></a></div>
-                    </div>
-                    <div class="col-auto">
-                        <div class="row">
-                            <div class="col">
-                                <div><a href="{{ path('planning') }}">Programmation</a></div>
-                            </div>
-                            <div class="col-auto">
-                                <div><a href="{{ path('practical_info') }}">Infos pratiques</a></div>
-                            </div>
-                            <div class="col-auto">
-                                <div><a href="{{ path('access_plan') }}">Plan d'accès</a></div>
-                            </div>
-                            <div class="col-auto">
-                                <div><a class="header-ticket-link" href="{{ path('ticket') }}">Billetterie</a></div>
-                            </div>
-                            <div class="col-auto">
-                                <div>FR / EN</div>
+            <header class="header">
+                <div class="container-fluid">
+                    <div class="row align-items-center">
+                        <div class="col-auto mr-auto">
+                            <div><a href="{{ path('home') }}"><img src="{{ asset('images/LOGO-CENTRE.png') }}" alt=""></a></div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="row">
+                                <div class="col">
+                                    <div><a href="{{ path('planning') }}">Programmation</a></div>
+                                </div>
+                                <div class="col-auto">
+                                    <div><a href="{{ path('practical_info') }}">Infos pratiques</a></div>
+                                </div>
+                                <div class="col-auto">
+                                    <div><a href="{{ path('access_plan') }}">Plan d'accès</a></div>
+                                </div>
+                                <div class="col-auto">
+                                    <div><a class="header-ticket-link" href="{{ path('ticket') }}">Billetterie</a></div>
+                                </div>
+                                <div class="col-auto">
+                                    <div>FR / EN</div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </header>
+            <div class="loader-wrapper">
+                <div class="loader"></div>
             </div>
-        </header>
-        {% block body %}{% endblock %}
-        {% block footer %}
-            {{ include('footer.html.twig') }}
-        {% endblock %}
+            <div class="content">
+                {% block body %}{%  endblock %}
+            </div>
+            {% block footer %}
+                {{ include('footer.html.twig') }}
+            {% endblock %}
 
-        <div class="cursor cursor--large"></div>
-        <div class="cursor cursor--small"></div>
+            <div class="cursor cursor--large"></div>
+            <div class="cursor cursor--small"></div>
+        </div>
+        <div class="hidden-text-container"></div>
 
         {% block javascripts %}
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
             <script type="text/javascript" src="{{ asset('js/script.js') }}"></script>
         {% endblock %}
