--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello PlanningController!{% endblock %}
 
 {% block body %}
-<div class="planning position-relative py-5">
+<div class="planning position-relative py-5" style="background-image: url(/images/programme-bg-page.png); background-size: cover;">
     <div class="container mt-5">
         <div class="row">
             <div class="col">
@@ -11,10 +11,8 @@
                     <div class="col-auto offset-2 text-center">
                         <div class="planning-archive-info text-center d-flex flex-column">
                             <div class="d-inline-flex justify-content-center text-center">
-                                <div class="secondary-square"></div>
-                            </div>
-                            <div class="d-inline-flex justify-content-center text-center">
-                                <div class="mt-3">Voir des infos sur <br>les archives</div>
+                                <div class="square-action secondary-square mx-auto position-relative"></div>
+                                <div class="hidden-text">Voir des infos sur <br>les archives</div>
                             </div>
                         </div>
                     </div>
@@ -47,19 +45,12 @@
         </div>
         <div class="row pt-5 justify-content-center">
             <div class="col-auto text-center pt-5">
-                <div class="ternary-square"></div>
-            </div>
-        </div>
-    </div>
-    <div class="container mt-3">
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <div>Voir l'historique</div>
+                <div class="square-action secondary-square ternary-square position-relative"></div>
+                <div class="hidden-text">Voir l'historique</div>
             </div>
         </div>
     </div>
     <div class="my-5 py-5"></div>
-    <div class="my-5"></div>
     <div class="my-5"></div>
 </div>
 {% endblock %}
