--- a/public/css/style.css
+++ b/public/css/style.css
@@ -430,7 +430,7 @@ body {
     position: relative;
 }
 .app-wrapper {
-    background-color: black;
+    background-color: white;
     z-index: 10;
     transition: opacity ease-in 0.3s;
 }
@@ -486,4 +486,8 @@ body {
 }
 .hide {
     display: none;
+}
+.transparent {
+    opacity: 0;
+    background-color: white;
 }
