--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,21 +27,21 @@
                             <div><a href="{{ path('home') }}"><img src="{{ asset('images/LOGO-CENTRE.png') }}" alt=""></a></div>
                         </div>
                         <div class="col-auto">
-                            <div class="row">
-                                <div class="col">
-                                    <div><a href="{{ path('planning') }}">Programmation</a></div>
+                            <div class="row align-items-center">
+                                <div class="col-auto">
+                                    <div><a href="{{ path('planning') }}">Expositions</a></div>
                                 </div>
                                 <div class="col-auto">
                                     <div><a href="{{ path('practical_info') }}">Infos pratiques</a></div>
                                 </div>
                                 <div class="col-auto">
-                                    <div><a href="{{ path('access_plan') }}">Plan d'accès</a></div>
+                                    <div><a href="{{ path('access_plan') }}">Venir sur le lieu</a></div>
                                 </div>
                                 <div class="col-auto">
                                     <div><a class="header-ticket-link" href="{{ path('ticket') }}">Billetterie</a></div>
                                 </div>
-                                <div class="col-auto">
-                                    <div>FR / EN</div>
+                                <div class="col d-flex">
+                                    <div class="underline-text">FR</div> <div class="ml-1">/ EN</div>
                                 </div>
                             </div>
                         </div>
