--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,19 +28,19 @@
                         </div>
                         <div class="col-auto">
                             <div class="row align-items-center">
-                                <div class="col-auto">
+                                <div class="mx-3 col-auto">
                                     <div><a href="{{ path('planning') }}">Expositions</a></div>
                                 </div>
-                                <div class="col-auto">
+                                <div class="mx-3 col-auto">
                                     <div><a href="{{ path('practical_info') }}">Infos pratiques</a></div>
                                 </div>
-                                <div class="col-auto">
+                                <div class="mx-3 col-auto">
                                     <div><a href="{{ path('access_plan') }}">Venir sur le lieu</a></div>
                                 </div>
-                                <div class="col-auto">
+                                <div class="mx-3 col-auto">
                                     <div><a class="header-ticket-link" href="{{ path('ticket') }}">Billetterie</a></div>
                                 </div>
-                                <div class="col d-flex">
+                                <div class="mx-3 col d-flex">
                                     <div class="underline-text">FR</div> <div class="ml-1">/ EN</div>
                                 </div>
                             </div>
@@ -58,13 +58,12 @@
             <div class="cursor cursor--large"></div>
             <div class="cursor cursor--small"></div>
         </div>
-        <div class="hidden-text-container"></div>
         <div class="loader-wrapper">
             <div class="loader"></div>
         </div>
         {% block javascripts %}
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
+            <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="{{ asset('js/jquery.ripples-min.js') }}"></script>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
             <script type="text/javascript" src="{{ asset('js/script.js') }}"></script>
         {% endblock %}
