--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
     <div class="home-main">
     <div class="container-fluid pt-5">
         <div class="row mb-4 mt-5 pt-5">
-            <div class="col-2 offset-4 move text-center">
+            <div class="col-2 pt-5 offset-4 move text-center">
                 <div class="square-action secondary-square mx-auto position-relative"></div>
                 <div class="hidden-text">Trois expositions temporaires Une monographie</div>
             </div>
