--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <div class="home-main">
     <div class="container-fluid pt-5">
-        <div class="row mb-4 mt-5 pt-5">
-            <div class="col-2 pt-5 offset-4 move text-center">
-                <div class="square-action secondary-square mx-auto position-relative"></div>
+        <div class="row mb-4 mt-5">
+            <div class="col-3 pt-5 offset-4 move text-center">
+                <div class="square-action secondary-square mx-auto"></div>
                 <div class="hidden-text">Trois expositions temporaires Une monographie</div>
             </div>
         </div>
@@ -20,13 +20,13 @@
             </div>
         </div>
         <div class="row mt-5 pt-5 pb-3">
-            <div class="col-2 offset-8 text-center move">
+            <div class="col-3 offset-8 text-center move">
                 <div class="square-action secondary-square mx-auto"></div>
                 <div class="hidden-text">Une initiative de la mairie de Bordeaux</div>
             </div>
         </div>
         <div class="row mt-2">
-            <div class="col-2 offset-2 move">
+            <div class="col-3 offset-2 move">
                 <div class="square-action secondary-square mx-auto current-event--main-square tiny-square"></div>
                 <div class="hidden-text">{{ homepage.openInfo }}</div>
             </div>
