--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         <div class="app-wrapper {% if app.request.get('_route') == 'home' %}transparent{% endif %}">
             <div class="container-fluid pre-header">
                 <div class="row d-flex h-100 justify-content-center align-items-center">
-                    <div class="col-auto h-100 d-flex align-items-center">
+                    <div class="col-auto h-100 d-flex align-items-center font-italic">
                         Ré-ouverture de la Base Sous-Marine en 2021 !
                     </div>
                 </div>
