--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
-body {
-    cursor: none;
-}
+html * {cursor:none!important}
+
 header {
     background-color: #1D1D1B;
     color: white;
@@ -31,6 +30,7 @@ header {
     color: white;
 }
 .secondary-square {
+    display: block;
     height: 40px;
     width: 40px;
     border: 1px solid white;
@@ -224,7 +224,7 @@ a:hover {
 }
 .second-white-line {
     margin-top: 0;
-    height: 100%;
+    height: 90%;
     z-index: 0;
 }
 .ternary-square {
@@ -352,7 +352,7 @@ a:hover {
 }
 .ticket-resume {
     padding: 21px 24px 60px 24px;
-    background-color: #2B2B2A;
+    background-color: rgba(120, 120, 120, 0.5);
     color: white;
 }
 input {
@@ -496,6 +496,189 @@ body {
     left: 0;
     content: "";
     width: 21px;
-    height: 1px;
+    height: 2px;
     background-color: white;
+}
+.text-no-flow {
+    height: 0;
+}
+.block-down {
+    margin-bottom: -100px;
+}
+a.square-action:hover {
+    border: 1px solid white;
+}
+
+.mobile-sticky-header input + label {
+    position: fixed;
+    top: 78px;
+    right: 40px;
+    height: 20px;
+    width: 15px;
+    z-index: 5;
+}
+.mobile-sticky-header input + label span {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    top: 50%;
+    margin-top: -1px;
+    left: 0;
+    display: block;
+    background: white;
+    transition: .5s;
+}
+.mobile-sticky-header input + label span:first-child {
+    top: 16px;
+}
+.mobile-sticky-header input + label span:last-child {
+    top: 22px;
+}
+.mobile-sticky-header label:hover {
+    cursor: none !important;
+}
+.mobile-sticky-header input:checked + label span {
+    opacity: 0;
+    top: 50%;
+}
+.mobile-sticky-header input:checked + label span:first-child {
+    opacity: 1;
+    transform: rotate(405deg);
+}
+.mobile-sticky-header input:checked + label span:last-child {
+    opacity: 1;
+    transform: rotate(-405deg);
+}
+.mobile-sticky-header li div {
+    color: white;
+}
+.mobile-sticky-header input ~ nav {
+    background: #1D1D1B;
+    position: fixed;
+    top: 44px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    z-index: 3;
+    transition: .5s;
+    transition-delay: .5s;
+    overflow: hidden;
+}
+.mobile-sticky-header input ~ nav > ul {
+    text-align: center;
+    position: absolute;
+    padding-left: 0;
+}
+.mobile-sticky-header input ~ nav > ul > li {
+    opacity: 0;
+    transition: .5s;
+    transition-delay: 0s;
+}
+.mobile-sticky-header input ~ nav > ul > li > a, .mobile-sticky-header input ~ nav > ul > li > div  {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 700;
+    font-family: sans-serif;
+    display: block;
+    padding: 30px;
+}
+input::placeholder {
+    font-style: italic;
+}
+.mobile-sticky-header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.mobile-sticky-header input:checked ~ nav {
+    height: 100%;
+    transition-delay: 0s;
+}
+.mobile-sticky-header input:checked ~ nav > ul > li {
+    opacity: 1;
+    transition-delay: .5s;
+}
+.mobile-sticky-header h1 {
+    position: fixed;
+    top: 54px;
+    left: 40px;
+    z-index: 6;
+    font-size: 20px;
+    font-weight: 900;
+    font-family: sans-serif;
+    text-transform: uppercase;
+}
+.pre-header-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 6;
+}
+/* Customize the label (the container) */
+.custom-checkbox {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 25px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.custom-checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: black;
+}
+
+/* On mouse-over, add a grey background color */
+.custom-checkbox:hover input ~ .checkmark {
+    background-color: black;
+}
+
+/* When the checkbox is checked, add a blue background */
+.custom-checkbox input:checked ~ .checkmark {
+    background-color: black;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.custom-checkbox input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.custom-checkbox .checkmark:after {
+    left: 7px;
+    top: 3px;
+    width: 7px;
+    height: 12px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
