--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -4,15 +4,15 @@
 
 {% block body %}
 <div class="planning position-relative py-5" style="background-image: url(/images/programme-bg-page.png); background-size: cover;">
-    <div class="container mt-5">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col">
                 <div class="row">
-                    <div class="col-auto offset-2 text-center">
+                    <div class="col-auto offset-4 text-center">
                         <div class="planning-archive-info text-center d-flex flex-column">
-                            <div class="d-inline-flex justify-content-center text-center">
+                            <div class=" justify-content-center text-center">
                                 <div class="square-action secondary-square mx-auto position-relative"></div>
-                                <div class="hidden-text">Voir des infos sur <br>les archives</div>
+                                <div class="hidden-text text-no-flow">Voir des infos sur <br>les archives</div>
                             </div>
                         </div>
                     </div>
@@ -45,8 +45,8 @@
         </div>
         <div class="row pt-5 justify-content-center">
             <div class="col-auto text-center pt-5">
-                <div class="square-action secondary-square ternary-square position-relative"></div>
-                <div class="hidden-text">Voir l'historique</div>
+                <div class="square-action secondary-square ternary-square position-relative mx-auto"></div>
+                <div class="hidden-text text-no-flow">Voir l'historique</div>
             </div>
         </div>
     </div>
