--- a/templates/ticket/index.html.twig
+++ b/templates/ticket/index.html.twig
@@ -15,21 +15,32 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 ticket-form">
-                <div class="col-7 offset-3">
+                <div class="col-9 offset-2">
                     <div class="ml-4 pl-2 d-flex flex-column">
-                        <div>Réserver votre billet</div>
+                        <div class="mb-2">Réserver votre billet</div>
                         <div class="d-flex"><input class="w-100" type="text"></div>
                         <div class="d-flex"><input class="w-100" type="text"></div>
-                        <div class="d-flex"><input class="w-100" type="text"></div>
-                        <div><input type="checkbox">J'accepte les Conditions générales de vente du Centre.</div>
-                        <div class="text-right mt-3"><button class="primary-button">Ajouter au panier</button></div>
+                        <div class="d-flex"><input placeholder="Adresse mail" class="w-100" type="text"></div>
+                        <div class="d-flex"><input placeholder="Numéro de téléphone" class="w-100" type="text"></div>
+                        <div>
+                            <div class="d-flex align-items-center mt-3">
+                                <label class="custom-checkbox">
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                                <div class="ml-3 d-inline">
+                                    J'accepte les <span class="underline">Conditions générales de vente</span> du Centre.</div>
+                                </div>
+                            </div>
+                            <div class="text-right mt-3"><button class="primary-button">Ajouter au panier</button>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="col-7 pt-5 offset-1">
-                    <div>VOTRE PANIER</div>
-                    <div class="ticket-resume row">
+                    <div class="">VOTRE PANIER</div>
+                    <div class="ticket-resume row m-0">
                         <div class="col-6 mb-3 font-weight-bold">
                             Billet d’entrée
                         </div>
@@ -58,7 +69,7 @@
                             5 €
                         </div>
                     </div>
-                    <div class="row justify-content-end p-3">
+                    <div class="row mx-0 justify-content-end p-3">
                         <div class="col p-0">
                             <div class="row">
                                 <div class="col-3 text-right ml-auto">Total</div>
@@ -74,9 +85,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-6 pl-0 pr-2 d-flex"><button class="primary-button w-100">Payer en ligne</button></div>
-                        <div class="col-6 pr-0 pl-2 d-flex"><button class="secondary-button w-100">Payer sur place</button></div>
+                    <div class="row m-0">
+                        <div class="col-6 pl-0 pr-2 d-flex"><button class="primary-button w-100"><a href="{{ path('ticket_pay') }}">Payer en ligne</a></button></div>
+                        <div class="col-6 pr-0 pl-2 d-flex"><button class="secondary-button w-100"><a href="{{ path('ticket_pay') }}">Payer sur place</a></button></div>
                     </div>
                 </div>
             </div>
