--- a/templates/ticket_pay/index.html.twig
+++ b/templates/ticket_pay/index.html.twig
@@ -20,14 +20,14 @@
                             <div class="mb-2">Réserver votre billet</div>
                             <div class="mb-3">Entrez vos informations bancaires.</div>
                             <div>Moyen de paiement :</div>
-                            <div class="d-flex"><input class="w-50" type="text"></div>
+                            <div class="d-flex"><input placeholder="Moyen de paiement" class="w-50" type="text"></div>
                             <div>Numéro de carte</div>
-                            <div class="d-flex"><input class="w-50" type="text"></div>
+                            <div class="d-flex"><input placeholder="XXXX XXXX XXXX XXXX" class="w-50" type="text"></div>
                             <div>Date d'expiration</div>
-                            <div class="d-flex"><input class="w-50" type="text"></div>
-                            <div>Date d'expiration</div>
-                            <div class="d-flex"><input class="w-50" type="text"></div>
-                            <div class="text-left mt-3"><button class="primary-button">Payer et réserver</button></div>
+                            <div class="d-flex"><input placeholder="Moyen de paiement" class="w-50" type="text"></div>
+                            <div>Cryptogramme visuel</div>
+                            <div class="d-flex"><input placeholder="xxx" class="w-50" type="text"></div>
+                            <div class="text-left mt-3"><button class="primary-button"><a href="{{ path('ticket_confirmation') }}">Payer et réserver</a></button></div>
                         </div>
                     </div>
                 </div>
