--- a/public/css/style.css
+++ b/public/css/style.css
@@ -380,7 +380,7 @@ input:focus {
 .cursor {
     width: var(--size);
     height: var(--size);
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     transform: translate(-50%, -50%);
